# roper2

./: .gdb_history  .gitignore  Cargo.toml  Makefile  build.rs
.github/workflows/: rust.yml
config/: binary_path.txt  isaac64_seed.txt  roper.ini
src/: .gitignore  lib.rs  lit-glossary.tex  lit-header.tex
src/emu/: hatchery.org  hatchery.rs  hatchery.rust  hatchery.tex  lit-header.tex  loader.org  loader.rs  loader.tex  mod.rs
src/evo/: crossover.org  crossover.rs  crossover.tex  evolver.rs  mod.rs  selector.org  selector.rs  selector.tex
src/fit/: circbuf.rs  evaluator.rs  mod.rs
src/log/: disas.rs  logger.rs  mod.rs
src/par/: roper.ini  statics.org  statics.rs  statics.tex
