[package]
name = "roper2"
version = "0.2.0"
authors = ["oblivia simplex <oblivia@paranoici.org>"]
build = "build.rs"
edition = "2018"

[lib]
name = "libroper"
path = "src/lib.rs"

[[bin]]
name = "roper"
path = "src/bin/roper.rs"

[dependencies]
#unicorn = { git = "https://github.com/oblivia-simplex/unicorn-rs", branch = "master" }
unicorn = { git = "https://github.com/ekse/unicorn-rs", branch = "master" } #"0.9.0"
libunicorn-sys = { git = "https://github.com/ekse/unicorn-rs", branch = "master" }
#ketos = "0.10.0"
#ketos_derive = "0.10.0"
goblin = "0.1.0"
capstone-sys = "0.10.0"
capstone = "0.6.0"
getopts = "0.2.21"
rand = "0.7.2"
rand_isaac = "0.2.0"
lazy_static = "1.4.0"
# bap = "0.1.0"
# bap-sys = "0.1.0"
rayon = "1.2.0"
hexdump = "0.1.0"
evmap = "7.1.2"
chan-signal = "0.3.3"
num = "0.2.0"
rust-ini = "0.14.0"
